// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar render - no config, no query 1`] = `
<EuiFlexGroup
  alignItems="center"
  component="div"
  gutterSize="xs"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={true}
  >
    <SearchBox
      onChange={[Function]}
      query={
        Query {
          "ast": Object {
            "addDefaultClause": [Function],
            "addFieldClause": [Function],
            "clauses": Array [],
            "clearFieldClauses": [Function],
            "clearIsClause": [Function],
            "getDefaultClause": [Function],
            "getDefaultClauses": [Function],
            "getFieldClause": [Function],
            "getFieldClauses": [Function],
            "getFields": [Function],
            "getIsClause": [Function],
            "getIsClauses": [Function],
            "removeFieldClause": [Function],
            "setFieldClauses": [Function],
            "setIsClause": [Function],
          },
          "syntax": Object {
            "parse": [Function],
            "print": [Function],
          },
          "text": "",
        }
      }
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`SearchBar render - no query, custom box placeholder and incremental 1`] = `
<EuiFlexGroup
  alignItems="center"
  component="div"
  gutterSize="xs"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={true}
  >
    <SearchBox
      config={
        Object {
          "incremental": false,
          "placeholder": "find something...",
        }
      }
      onChange={[Function]}
      query={
        Query {
          "ast": Object {
            "addDefaultClause": [Function],
            "addFieldClause": [Function],
            "clauses": Array [],
            "clearFieldClauses": [Function],
            "clearIsClause": [Function],
            "getDefaultClause": [Function],
            "getDefaultClauses": [Function],
            "getFieldClause": [Function],
            "getFieldClauses": [Function],
            "getFields": [Function],
            "getIsClause": [Function],
            "getIsClauses": [Function],
            "removeFieldClause": [Function],
            "setFieldClauses": [Function],
            "setIsClause": [Function],
          },
          "syntax": Object {
            "parse": [Function],
            "print": [Function],
          },
          "text": "",
        }
      }
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`SearchBar render - provided query, filters 1`] = `
<EuiFlexGroup
  alignItems="center"
  component="div"
  gutterSize="xs"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={true}
  >
    <SearchBox
      onChange={[Function]}
      query={
        Query {
          "ast": Object {
            "addDefaultClause": [Function],
            "addFieldClause": [Function],
            "clauses": Array [
              Object {
                "occur": "must",
                "type": "default",
                "value": "this",
              },
              Object {
                "occur": "must",
                "type": "default",
                "value": "is",
              },
              Object {
                "occur": "must",
                "type": "default",
                "value": "a",
              },
              Object {
                "occur": "must",
                "type": "default",
                "value": "query",
              },
            ],
            "clearFieldClauses": [Function],
            "clearIsClause": [Function],
            "getDefaultClause": [Function],
            "getDefaultClauses": [Function],
            "getFieldClause": [Function],
            "getFieldClauses": [Function],
            "getFields": [Function],
            "getIsClause": [Function],
            "getIsClauses": [Function],
            "removeFieldClause": [Function],
            "setFieldClauses": [Function],
            "setIsClause": [Function],
          },
          "syntax": Object {
            "parse": [Function],
            "print": [Function],
          },
          "text": "this is a query",
        }
      }
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiFilterGroup>
      <FilterBar
        config={
          Array [
            Object {
              "field": "open",
              "name": "Open",
              "type": "is",
            },
            Object {
              "field": "tag",
              "name": "Tag",
              "options": [Function],
              "type": "field_value_selection",
            },
          ]
        }
        onChange={[Function]}
        query={
          Query {
            "ast": Object {
              "addDefaultClause": [Function],
              "addFieldClause": [Function],
              "clauses": Array [
                Object {
                  "occur": "must",
                  "type": "default",
                  "value": "this",
                },
                Object {
                  "occur": "must",
                  "type": "default",
                  "value": "is",
                },
                Object {
                  "occur": "must",
                  "type": "default",
                  "value": "a",
                },
                Object {
                  "occur": "must",
                  "type": "default",
                  "value": "query",
                },
              ],
              "clearFieldClauses": [Function],
              "clearIsClause": [Function],
              "getDefaultClause": [Function],
              "getDefaultClauses": [Function],
              "getFieldClause": [Function],
              "getFieldClauses": [Function],
              "getFields": [Function],
              "getIsClause": [Function],
              "getIsClauses": [Function],
              "removeFieldClause": [Function],
              "setFieldClauses": [Function],
              "setIsClause": [Function],
            },
            "syntax": Object {
              "parse": [Function],
              "print": [Function],
            },
            "text": "this is a query",
          }
        }
      />
    </EuiFilterGroup>
  </EuiFlexItem>
</EuiFlexGroup>
`;
